--- a/app/views/bookingsync_portal/admin/rentals/index.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/index.html.erb
@@ -51,7 +51,7 @@
     <div class="rentals-list col-xs-4">
       <legend>Connect</legend>
       <%= link_to new_admin_remote_account_path, class: "btn btn-primary btn-lg btn-block" do %>
-        <%= icon "plus-circle" %> Add HolidayLettings Account
+        <%= icon "plus-circle" %> <%= t '.connect_accounts' %>
       <% end %>
     </div>
   <% end %>
