--- a/app/views/bookingsync_portal/admin/rentals/_remote_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_remote_rental.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-remote remote-disconnected-rental" id="<%= dom_id remote_rental %>"
   data-uid="<%= remote_rental.uid %>">
-  <div class="panel-heading" title="<%=t 'admin.remote_rentals.show.listing_id',
-    id: remote_rental.uid %>">
+  <div class="panel-heading" title="<%= RemoteRental.human_attribute_name(:uid) %>
+    <%= remote_rental.uid %>">
     <%= remote_rental.name.presence || "Unnamed rental" %><br/>
   </div>
   <div class="panel-body">
