--- a/app/views/bookingsync_portal/admin/remote_accounts/_form.html.erb
+++ b/app/views/bookingsync_portal/admin/remote_accounts/_form.html.erb
@@ -5,8 +5,7 @@
     </div>
 
     <div class="row push-xl-top">
-      <%= f.submit t(remote_account.new_record? ? '.submit_new' : '.submit_update'),
-        class: "btn btn-primary btn-lg btn-block" %>
+      <%= f.submit t('.submit_new'), class: "btn btn-primary btn-lg btn-block" %>
     </div>
   </div>
 <%- end -%>
