--- a/app/views/bookingsync_portal/admin/remote_accounts/new.html.erb
+++ b/app/views/bookingsync_portal/admin/remote_accounts/new.html.erb
@@ -1,3 +1,3 @@
 <h1><%=t '.title' %></h1>
-<%= render 'register' %>
-<%= render "form", remote_account: @new_remote_account %>
+<%= render 'how_to_connect' %>
+<%= render 'form', remote_account: @remote_account %>
