--- a/app/views/layouts/bookingsync_portal/admin.html.erb
+++ b/app/views/layouts/bookingsync_portal/admin.html.erb
@@ -8,5 +8,6 @@
 <body data-messagebus-channel="<%= messagebus_channel %>">
 <%= yield %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<div class="footer"></div>
 </body>
 </html>
