--- a/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
@@ -4,10 +4,10 @@
   <div class="panel-heading" title="<%= RemoteRental.human_attribute_name(:uid) %>
     <%= remote_rental.uid %>">
     <%= rental.name %>
-    <%= link_to "Remove connection",
+    <%= link_to t('.disconnect_rental'),
           bookingsync_portal.disconnect_admin_rental_path(rental),
           class: "btn btn-default btn-xs remove-connection",
-          data: {disable_with: "Removing..."},
+          data: {disable_with: t('.disconnecting_rental')},
           method: :put %>
   </div>
   <% if rental.remote_rental.synchronized? %>
@@ -22,6 +22,6 @@
       </div>
     </div>
   <% else %>
-    <div class="panel-body"><i class="fa fa-spinner fa-spin"></i> Synchronizing...</div>
+    <div class="panel-body"><%= icon('spinner fa-spin', t('.synchronizing')) %></div>
   <% end %>
 </div>
