add filtering of rental lists

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -4,6 +4,7 @@ $dropzone-active-bg: #fbf9ee;
 @import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'list_filters.css.scss';
 
 html, body {
   height: 100%;
