refactor filtering to be more robust

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -4,7 +4,7 @@ $dropzone-active-bg: #fbf9ee;
 @import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import 'list_filters.css.scss';
+@import 'list_filters';
 
 html, body {
   height: 100%;
