display separate message if no published rentals was present, instead of misleading all synchronized message

--- a/app/views/bookingsync_portal/admin/rentals/index.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/index.html.erb
@@ -4,7 +4,11 @@
       <legend><%=t '.bookingsync_header', account_name: current_account.name %></legend>
     </div>
     <div class="rentals-list-scroll">
-     <%- if @not_connected_rentals.length > 0 -%>
+      <%- if @rentals.count == 0 -%>
+        <div class="lead text-center well">
+          <p><%= t('.no_published_rentals_html', id: current_account.uid) %></p>
+        </div>
+      <%- elsif @not_connected_rentals.count > 0 -%>
         <% @not_connected_rentals.each do |rental| %>
           <%= render rental %>
         <% end %>
