--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -28,6 +28,7 @@ body > .footer {
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .rentals-list-header, .rentals-list-footer {
@@ -35,7 +36,7 @@ body > .footer {
 }
 
 .rentals-list-scroll {
-  flex: 1 1 auto;
+  flex: 0 0 auto;
   overflow-y: auto;
 }
 
