Add visible scope to allow filtering, add synced_id validations for rental, update filter styles

--- a/app/assets/stylesheets/bookingsync_portal/admin/_list_filters.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/_list_filters.scss
@@ -1,8 +1,8 @@
-legend {
-  form {
-    font-size: small;
-    label {
-      margin-right: 10px;
-    }
+.filterform {
+  margin-bottom: 5px;
+  font-size: small;
+
+  label {
+    margin-right: 10px;
   }
 }
