--- a/app/views/bookingsync_portal/admin/rentals/_new_remote_account.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_new_remote_account.html.erb
@@ -1,5 +1,3 @@
-<div>
-  <%= link_to new_admin_remote_account_path, class: "btn btn-primary btn-lg btn-block" do %>
-    <%= icon "plus-circle" %> <%= t '.connect_accounts' %>
-  <% end %>
-</div>
+<%= link_to new_admin_remote_account_path, class: "btn btn-default" do %>
+  <%= icon :plus %> <%= t '.connect_accounts' %>
+<% end %>
