--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -2,9 +2,8 @@ $dropzone-active-bg: #fbf9ee;
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import 'list_filters';
+@import "bootstrap-bookingsync-sprockets";
+@import "bootstrap-bookingsync";
 
 html, body {
   height: 100%;
@@ -16,12 +15,20 @@ body > .footer {
   clear: both;
 }
 
-#remote_account_uid {
-  text-align: center;
+.container-fullscreen {
+  height: 100%;
+  width: 100%;
 }
 
 .rentals-container {
   height: 100%;
+  padding: ceil($grid-gutter-width / 2) 0;
+  margin: 0 (-1 * ceil($grid-gutter-width / 2));
+
+  & > div {
+    height: 100%;
+    min-width: 300px;
+  }
 }
 
 .rentals-list {
@@ -29,19 +36,68 @@ body > .footer {
   display: flex;
   flex-direction: column;
   overflow: auto;
+  padding: ceil($grid-gutter-width / 2);
+  border-radius: 4px;
+  border: 1px solid $gray-lighter;
+
+  legend {
+    border: 0;
+  }
+
+  h3 {
+    border-top: 1px solid $gray-lighter;
+    font-size: 14px;
+    padding: 10px 10px;
+    margin: 0;
+  }
+}
+
+.filterform {
+  margin-bottom: 10px;
+  width: 90%;
+  margin-left: 5%;
+  font-size: small;
 }
 
 .rentals-list-header, .rentals-list-footer {
   flex: 0 0 auto;
 }
 
+.rentals-list-header {
+  img {
+    height: 29px;
+  }
+}
+
+.rentals-list-footer {
+  border-top: 1px solid $gray-lighter;
+  margin-left: (-1 * ceil($grid-gutter-width / 2));
+  margin-right: (-1 * ceil($grid-gutter-width / 2));
+  padding-top: 8px;
+  margin-bottom: (-1 * ceil($grid-gutter-width / 2)) + 8px;
+}
+
 .rentals-list-scroll {
-  flex: 0 0 auto;
+  flex: 1 1 auto;
   overflow-y: auto;
+  margin-left: (-1 * ceil($grid-gutter-width / 2));
+  margin-right: (-1 * ceil($grid-gutter-width / 2));
+
+  .well {
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    box-shadow: none;
+    background-color: $body-bg;
+
+    i {
+      color: $gray-light;
+    }
+  }
 }
 
 .remote-rentals-list {
-  border: 1px solid transparent;
+  background-color: #fff;
 
   &.dropzone-active {
     border: 1px dashed darken($dropzone-active-bg, 7%);
@@ -66,31 +122,61 @@ body > .footer {
   }
 }
 
-.ui-draggable-helper {
-  opacity: 0.6;
+.rentals-container .panel-bookingsync.ui-draggable-dragging {
+  box-shadow: 0 0 10px $gray-light;
+  background-color: #fff;
+  height: auto;
+  border: 1px solid $gray-lighter;
+  width: 31%;
+  transform: scale(1.1);
+}
+
+.panel {
+  padding: 10px;
+  border-radius: 0;
+  margin-bottom: 0;
+  border-top: 1px solid $gray-lighter;
+  border-bottom: 1px solid $gray-lighter;
+  position: relative;
+
+  & + .panel,
+  & + h3 {
+    border-top: 0;
+  }
 }
 
 .panel-body-grid {
   display: flex;
+  overflow: hidden;
 }
 
 .panel-body-grid-photo {
   min-width: 96px;
+  height: 64px;
   flex-grow: 0;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .panel-body-grid-text {
-  padding: $padding-base-vertical $padding-base-horizontal;
+  padding: 0 $padding-base-horizontal;
   flex-grow: 1;
+  overflow: hidden;
+
+  h4 {
+    margin: 0 0 10px 0;
+  }
+
+  p {
+    margin: 0;
+    font-size: 12px;
+  }
 }
 
 .panel-bookingsync {
-  @extend .panel-info;
+  background-color: $body-bg;
 }
 
 .panel-connected {
-  @extend .panel-success;
-
   &.pending {
     border-color: darken($dropzone-active-bg, 7%);
 
@@ -108,15 +194,36 @@ body > .footer {
     position: absolute;
     right: 3px;
     top: 8px;
+    border-radius: 11px;
+
+    span {
+      display: none;
+    }
+
+    &:hover {
+      background-color: $brand-danger;
+      border-color: $brand-danger;
+      border-radius: $border-radius-small;
+
+      i {
+        display: none;
+      }
+
+      span {
+        display: block;
+      }
+    }
   }
 }
 
 .panel-remote {
-  @extend .panel-default;
+  background-color: $body-bg;
+  opacity: 0.5;
 }
 
 .panel.ui-draggable {
   &:hover {
     cursor: move;
+    background-color: #fff;
   }
 }
