--- a/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
@@ -1,15 +1,10 @@
+<%-
+disconnect_label = content_tag(:i, "", { class: 'fa fa-check' }) + h(" ") +
+  content_tag(:span, t('.disconnect_rental'))
+-%>
 <div
   class="panel panel-connected <%= "pending" unless remote_rental.synchronized? %>"
   id="<%= dom_id rental %>">
-  <div class="panel-heading" title="<%= RemoteRental.human_attribute_name(:uid) %>
-    <%= remote_rental.uid %>">
-    <%= rental.name %>
-    <%= link_to t('.disconnect_rental'),
-          bookingsync_portal.disconnect_admin_rental_path(rental),
-          class: "btn btn-default btn-xs remove-connection",
-          data: {disable_with: t('.disconnecting_rental')},
-          method: :put %>
-  </div>
   <% if rental.remote_rental.synchronized? %>
     <div class="panel-body-grid">
       <div class="panel-body-grid-photo">
@@ -18,7 +13,14 @@
         <%- end -%>
       </div>
       <div class="panel-body-grid-text">
-        <%= rental_details(rental) %>
+        <h4 title="<%= RemoteRental.human_attribute_name(:uid) %>
+          <%= remote_rental.uid %>"><%= remote_rental.name %></h4>
+        <%= link_to disconnect_label,
+          bookingsync_portal.disconnect_admin_rental_path(rental),
+          class: "btn btn-default btn-xs btn-success remove-connection",
+          data: { disable_with: t('.disconnecting_rental') },
+          method: :put %>
+        <p class="text-overflow"><%= rental_details(rental) %></p>
       </div>
     </div>
   <% else %>
