Improve Alerts style within Panels

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -143,6 +143,15 @@ body > .footer {
   & + h3 {
     border-top: 0;
   }
+
+  .alert {
+    margin: 10px -12px;
+    border-radius: 0;
+  }
+
+  .alert-bottom:last-of-type {
+    margin-bottom: -10px;
+  }
 }
 
 .panel-body-grid {
