--- a/app/views/bookingsync_portal/admin/rentals/index.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/index.html.erb
@@ -25,8 +25,10 @@
   <div class="col-xs-4">
     <div class="remote-rentals-list rentals-list">
       <div class="rentals-list-header">
-        <legend class="text-center"><%= image_tag("#{BookingsyncPortal.portal_name.parameterize}.png",
-          alt: BookingsyncPortal.portal_name) %></legend>
+        <legend class="text-center">
+          <%= image_tag("#{BookingsyncPortal.portal_name.parameterize}.png",
+            alt: BookingsyncPortal.portal_name) %>
+        </legend>
       </div>
 
       <div class="rentals-list-scroll">
