--- a/app/views/layouts/bookingsync_portal/_menu.html.erb
+++ b/app/views/layouts/bookingsync_portal/_menu.html.erb
@@ -1,11 +1,30 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container container-fullscreen">
     <div class="navbar-header">
+      <%- if yield(:navbar_right).present? -%>
+        <button type="button" class="navbar-toggle navbar-toggle-context" data-toggle="collapse"
+                data-target=".navbar-context1-collapse">
+          <span class="sr-only">
+            <%=t 'bookingsync_portal.admin.layout.menu.toggle_navigation' %>
+          </span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      <%- end -%>
       <div>
-        <a class="navbar-brand h1" href="#" data-toggle="dropdown">
-          <i class="fa fa-globe"></i> <%= BookingsyncPortal.portal_name %>
+        <%= link_to icon("globe", BookingsyncPortal.portal_name), admin_root_url,
+          class: "navbar-brand h1",
+          data: { toggle: "dropdown" } %>
         </a>
       </div>
     </div>
+    <%- if yield(:navbar_right).present? -%>
+      <div class="collapse navbar-collapse navbar-context1-collapse">
+        <div class="navbar-right">
+          <%= yield(:navbar_right) %>
+        </div>
+      </div>
+    <%- end -%>
   </div>
 </nav>
