--- a/app/views/bookingsync_portal/admin/rentals/index.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/index.html.erb
@@ -48,11 +48,14 @@
                 <%= render "remote_rental", remote_rental: remote_rental %>
               <% end %>
             <% end %>
-          <%- else -%>
+          <%- elsif !BookingsyncPortal.create_remote_rental_from_app -%>
             <div class="lead text-center well">
               <p class=""><%= icon 'info fa-lg' %></p>
-              <p><%=t '.create_listings_first' %></p>
+              <p><%=t '.create_listings_first', portal_name: BookingsyncPortal.portal_name %></p>
             </div>
+          <%- end -%>
+          <%- if BookingsyncPortal.create_remote_rental_from_app -%>
+            <%= render "new_remote_rental", remote_account: remote_account %>
           <%- end -%>
         <% end %>
       </div>
