simplify connection controller, connection js, add message bus handling, separate sync status from connection in ui

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -214,27 +214,29 @@ body > .footer {
     position: relative;
   }
 
-  .remove-connection {
+  .status {
     position: absolute;
     right: 3px;
     top: 8px;
     border-radius: 11px;
 
-    span {
-      display: none;
-    }
-
-    &:hover {
-      background-color: $brand-danger;
-      border-color: $brand-danger;
-      border-radius: $border-radius-small;
-
-      i {
+    .remove-connection {
+      span {
         display: none;
       }
 
-      span {
-        display: block;
+      &:hover {
+        background-color: $brand-danger;
+        border-color: $brand-danger;
+        border-radius: $border-radius-small;
+
+        i {
+          display: none;
+        }
+
+        span {
+          display: block;
+        }
       }
     }
   }
