--- a/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_connected_rental.html.erb
@@ -1,31 +1,30 @@
-<%-
-disconnect_label = content_tag(:i, "", { class: 'fa fa-check' }) + h(" ") +
-  content_tag(:span, t('.disconnect_rental'))
--%>
 <div
   class="panel panel-connected <%= "pending" unless remote_rental.synchronized? %>"
   id="<%= dom_id rental %>">
-  <% if rental.remote_rental.synchronized? %>
-    <div class="panel-body-grid">
-      <div class="panel-body-grid-photo">
-        <%- if rental.ordered_photos.first -%>
-          <%= image_tag rental.ordered_photos.first.thumb_url, class: "img-responsive" %>
-        <%- end -%>
-      </div>
-      <div class="panel-body-grid-text">
-        <h4 title="<%= RemoteRental.human_attribute_name(:name) %>: <%= remote_rental.name %>
-          <%= RemoteRental.human_attribute_name(:uid) %>: <%= remote_rental.uid %>">
-            <%= remote_rental.rental.name %>
-        </h4>
-        <%= link_to disconnect_label,
-          bookingsync_portal.admin_connection_path(rental.connection),
-          class: "btn btn-default btn-xs btn-success remove-connection",
-          data: { disable_with: t('.disconnecting_rental') },
-          method: :delete %>
-        <p class="text-overflow"><%= rental_details(rental) %></p>
-      </div>
+
+  <div class="panel-body-grid">
+    <div class="panel-body-grid-photo">
+      <%- if rental.ordered_photos.first -%>
+        <%= image_tag rental.ordered_photos.first.thumb_url, class: "img-responsive" %>
+      <%- end -%>
     </div>
-  <% else %>
-    <div class="panel-body"><%= icon('spinner fa-spin', t('.synchronizing')) %></div>
-  <% end %>
+    <div class="panel-body-grid-text">
+      <h4 title="<%= RemoteRental.human_attribute_name(:uid) %>: <%= remote_rental.uid %>">
+          <%= remote_rental.display_name %>
+          / <%= rental.name %>
+      </h4>
+      <div class="status">
+        <% unless rental.remote_rental.synchronized? %>
+          <%= icon('spinner fa-spin', t('.synchronizing')) %>
+        <% end %>
+        <%= link_to bookingsync_portal.admin_connection_path(rental.connection),
+          class: "btn btn-default btn-xs btn-success remove-connection",
+          data: { disable_with: t('.disconnecting_rental') }, method: :delete do %>
+          <i class="fa fa-check"></i>
+          <span><%= t('.disconnect_rental') %></span>
+        <% end %>
+      </div>
+      <p class="text-overflow"><%= rental_details(rental) %></p>
+    </div>
+  </div>
 </div>
