--- a/app/views/bookingsync_portal/admin/rentals/_new_remote_rental.html.erb
+++ b/app/views/bookingsync_portal/admin/rentals/_new_remote_rental.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-remote new-remote-rental"
+<div class="panel panel-remote"
   data-remote-account-id="<%= remote_account.id %>">
   <div class="panel-heading text-center">
     <%=t ".drop_here", portal_name: BookingsyncPortal.portal_name %>
