Cleaner connected rental title

--- a/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
+++ b/app/assets/stylesheets/bookingsync_portal/admin/application.css.scss
@@ -189,6 +189,11 @@ body > .footer {
     position: relative;
   }
 
+  h4 small {
+    color: $gray-lighter;
+    display: block;
+  }
+
   .status {
     position: absolute;
     right: 3px;
